# Habit-Tracker

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habits/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_reward.py  0004_alter_habit_frequency.py
html/: index.html
nginx/: Dockerfile  nginx.conf
users/: models.py  permissions.py  serializers.py  telegram_bot.py  urls.py  views.py
users/management/commands/: create_admin.py
users/migrations/: 0001_initial.py  0002_user_telegram_id.py  0003_alter_user_telegram_id.py  0004_alter_user_telegram_id.py
