[tool.poetry]
name = "habittracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.4"
djangorestframework = "^3.16.0"
psycopg2 = "^2.9.10"
dotenv = "^0.9.9"
djangorestframework-simplejwt = "^5.5.1"
python-telegram-bot = "^22.3"
celery = "^5.5.3"
django-celery-beat = "^2.8.1"
eventlet = "^0.40.2"
redis = "^6.3.0"
requests = "^2.32.4"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"


[tool.poetry.group.extras.dependencies]
ipython = "^9.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '.git'

